--- a/package.json
+++ b/package.json
@@ -18,5 +18,10 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.4.2"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"firebase": "^10.0.0",
+		"firebase-admin": "^11.10.1",
+		"sveltefire": "^0.2.3"
+	}
 }
