--- a/.gitignore
+++ b/.gitignore
@@ -192,6 +192,7 @@ package
 !.yarn/plugins
 !.yarn/sdks
 !.yarn/versions
+yarn.lock
 
 # if you are NOT using Zero-installs, then:
 # comment the following lines
